--- a/templates/regVenta.html
+++ b/templates/regVenta.html
@@ -133,36 +133,36 @@
                 <button type="button" onclick="closeModal()">Cerrar</button>
             </div>
             <section class="pre-visualizacion">
-                <div>
-                    <img src="../static/assets/img/Logotipo_GladiatorRedondo.png" alt="Logotipo Gladiator's" class="logo-redondo">
-                </div>
-                <div class="parrafo">
-                    <p>No. Venta:</p>
-                    <p>{{ "{:08d}".format(numero_venta) }}</p>
-                </div>
-                <div class="container-linea">
-                    <p>Atendido por:</p>
-                    <p>{{ usuario }}</p>
-                </div>
-                <div class="efectivo">
-                    <label for="money-received">Efectivo recibido</label>
-                    <input type="number" id="money-received" name="money-received" min="0" step="0.01" placeholder="00.00">
-                </div>
-                <div class="container-vuelto">
-                    <p>Vuelto: $<span id="vuelto">0.00</span> </p>
-                    <p>Monto Efectivo: $<span id="monto-efectivo">0.00</span></p>
-                </div>
-                <div class="container-total">
-                    <p>Subtotal: ${{ "%.2f" % subtotal }}</p>
-                    <p>Total: ${{ "%.2f" % total }}</p>
-                </div>
-                <div class="botones">
-                    <form action="{{ url_for('registrar_venta') }}" method="POST" class="realizar-venta">
-                        <button type="submit">Realizar Venta</button>
-                    </form>
-                    <a href="ruta_a_la_pagina_de_cancelacion" class="btn">Cancelar Venta</a>
-                </div>
-            </section>
+    <div>
+        <img src="../static/assets/img/Logotipo_GladiatorRedondo.png" alt="Logotipo Gladiator's" class="logo-redondo">
+    </div>
+    <div class="parrafo">
+        <p>No. Venta:</p>
+        <p>{{ "{:08d}".format(numero_venta) }}</p>
+    </div>
+    <div class="container-linea">
+        <p>Atendido por:</p>
+        <p>{{ nombre_completo }}</p>
+    </div>
+    <div class="efectivo">
+        <label for="money-received">Efectivo recibido</label>
+        <input type="number" id="money-received" name="money-received" min="0" step="0.01" placeholder="00.00">
+    </div>
+    <div class="container-vuelto">
+        <p>Vuelto: $<span id="vuelto">0.00</span> </p>
+        <p>Monto Efectivo: $<span id="monto-efectivo">0.00</span></p>
+    </div>
+    <div class="container-total">
+        <p>Subtotal: ${{ "%.2f" % subtotal }}</p>
+        <p>Total: ${{ "%.2f" % total }}</p>
+    </div>
+    <div class="botones">
+        <form action="{{ url_for('registrar_venta') }}" method="POST" class="realizar-venta">
+            <button type="submit">Realizar Venta</button>
+        </form>
+        <a href="ruta_a_la_pagina_de_cancelacion" class="btn">Cancelar Venta</a>
+    </div>
+</section>
         </div>
     </main>
     
