--- a/templates/consultarUsuario.html
+++ b/templates/consultarUsuario.html
@@ -49,7 +49,7 @@
     </div>
 <p class="text">{{ usuario[1] }}</p>
 <p class="text" style="background-color: aqua;">{{ usuario[10] }}</p>
-<a href="{{ url_for('update1_usuario', id_usuario=usuario['ID']) }}" class="button-1">Editar</a>
+<a href="{{ url_for('update1_usuario', id_usuario=usuario[0]) }}" class="button-1">Editar</a>
 <a href="{{ url_for('consultar_usuarios') }}" class="button-2">Regresar</a>
 <hr class="line">
 <p class="informacion">ID: {{ usuario[4] }}</p>
@@ -62,7 +62,6 @@
 <p class="informacion8">CURP: {{ usuario[11] }}</p>
 <p class="informacion9">Tipo de Usuario: {{ usuario[12] }}</p>
 <p class="informacion10">Fecha de contratación: {{ usuario[13] }}</p>
-<p class="informacion11">Contraseña: {{ usuario[14] }}</p>
-<p class="informacion12">Correo electrónico: {{ usuario[15] }}</p>
+<p class="informacion11">Correo electrónico: {{ usuario[15] }}</p>
 </body>
 </html>
