--- a/templates/consultarUsuarios.html
+++ b/templates/consultarUsuarios.html
@@ -88,11 +88,7 @@
                                         <form action="{{ url_for('update1_usuario', id_usuario=fila[0]) }}" method="GET" style="display:inline;">
                                             <button type="submit" class="boton-2">Editar</button>
                                         </form>
-
-                                        <form action="{{ url_for('delete_usuario', id_usuario=fila[0]) }}" method="POST" style="display:inline;">
-                                            <button type="submit" class="boton-2">Eliminar</button>
-                                        </form>
-                                        <a href="{{ url_for('consultar_usuario', id_usuario=fila[0]) }}" class="boton-2">Ver</a>
+                                        <a href="{{ url_for('consultar_usuario', id_usuario=fila[0]) }}">👁️‍🗨️</a>
                                     </td>
 
                                 </tr>
