--- a/templates/editarUsuario.html
+++ b/templates/editarUsuario.html
@@ -9,11 +9,15 @@
     <link rel="stylesheet" href="../static/style/style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="../static/editar.css">
+    <!-- Modales -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
     <div class="container">
         <h2 class="my-4">Edición de nombre del usuario</h2>
-        <form action="{{ url_for('update_usuario_post', id_usuario=datos[0]) }}" method="POST" enctype="multipart/form-data">
+        <form id="myform" action="{{ url_for('update_usuario_post', id_usuario=datos[0]) }}" method="POST" enctype="multipart/form-data">
             <div class="form-row">
                 <div class="form-group col-md-6">
                     <label for="nombre">Nombre:</label>
@@ -71,8 +75,47 @@
                     <img src="{{ url_for('static', filename=datos[12]) }}" alt="Imagen actual" style="max-width: 200px;">
                 </div>
             </div>
-           
-            <button type="submit" class="btn btn-primary mt-3" onclick="confirm('¿Esta seguro de querer realizar este cambio?')">Actualizar</button>
+            <button type="button" type="submit" class="btn btn-primary mt-3 " onclick="Swal.fire({
+                    title: '¿Estás seguro de querer realizar este cambio?',
+                    text: '¡No podrás revertir esto!',
+                    icon: 'warning',
+                    showCancelButton: true,
+                    confirmButtonColor: '#FFF07FFF',
+                    cancelButtonColor: '#d33',
+                    confirmButtonText: '¡Sí, realizar cambio!'
+                    }).then((result) => {
+                    if (result.isConfirmed) {
+                    Swal.fire({
+                    title: '¡Cambio realizado!',
+                    text: 'El cambio ha sido efectuado con éxito.',
+                    icon: 'success'
+                    }).then(() => {
+                    document.getElementById('myform').submit();
+                    });
+                    }
+                    })">Actualizar</button>
+        </form>
+        </form>    
+        <form id="formdel" action="{{ url_for('delete_usuario', id_usuario=datos[0]) }}" method="POST" style="display:inline;">
+            <button type="button" class="btn-eliminar" onclick="Swal.fire({
+                title: '¿Estás seguro de querer realizar este cambio?',
+                text: '¡No podrás revertir esto!',
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#FFF07FFF',
+                cancelButtonColor: '#d33',
+                confirmButtonText: '¡Sí, realizar cambio!'
+                }).then((result) => {
+                if (result.isConfirmed) {
+                Swal.fire({
+                title: '¡Cambio realizado!',
+                text: 'El cambio ha sido efectuado con éxito.',
+                icon: 'success'
+                }).then(() => {
+                document.getElementById('formdel').submit();
+                });
+                }
+                })">Eliminar</button>
         </form>
     </div>
 </body>
