--- a/templates/secciones.html
+++ b/templates/secciones.html
@@ -48,12 +48,12 @@
         <h1>Bienvenido, {{ username }}</h1>
         <hr class="lin">
         <div class="button-container">
-            {% if rol %}
+            {% if rol ==1 %}
                 <div class="button-ventas">
                     <a href="{{ url_for('registrar_venta') }}" style="color: black;">Ventas</a>
                 </div>
                 <div class="button-usuario">
-                    <a href="{{ url_for('registrar_usuario') }}" style="color: black;">Usuarios</a>
+                    <a href="{{ url_for('consultar_usuarios') }}" style="color: black;">Usuarios</a>
                 </div>
             {% else %}
                 <div class="button-ventas">
@@ -61,7 +61,7 @@
                 </div>
             {% endif %}
             <div class="button-producto">
-                <a href="{{ url_for('productos') }}" style="color: black;">Productos</a>
+                <a href="{{ url_for('consultar_productos') }}" style="color: black;">Productos</a>
             </div>
         </div>
     </main>
